added deprecate warning and exampledata

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,9 @@
     <title></title>
   </head>
   <body>
-  <div class="root"></div>
-  <script src="http://localhost:8080/webpack-dev-server.js"></script>
-  <script src="./dist/main.js" charset="utf-8"></script>
+    <div class="warning">WARNING! ONLY DUMMYDATA SINCE THE API IM I WAS USING IS NOW DEPRECATED</div>
+    <div class="root"></div>
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
+    <script src="./dist/main.js" charset="utf-8"></script>
   </body>
 </html>
